# fastapi-starter-kit

./: .dockerignore  Dockerfile  LICENSE  README.md  app.py  db.py  docker-compose-local.yml  pyproject.toml
.github/workflows/: python-app-test.yml
book/: app.py
tests/: conftest.py
tests/book/: test_app.py
